# cpman

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  resources.qrc
app/core/: AppInfo.cpp  AppInfo.h  AutoPaster.cpp  AutoPaster.h  ClipboardWatcher.cpp  ClipboardWatcher.h  Database.cpp  Database.h  FocusManager.cpp  FocusManager.h  HotkeyManager.cpp  HotkeyManager.h  ImageStore.cpp  ImageStore.h  InMemoryStore.cpp  InMemoryStore.h  Settings.cpp  Settings.h  SingleInstance.cpp  SingleInstance.h  Types.h
app/macos/: Info.plist.in
app/platform/: AppInfo_mac.mm  AppInfo_x11.cpp  AutoPaste_mac.mm  AutoPaste_wayland.cpp  AutoPaste_win.cpp  AutoPaste_x11.cpp
app/ui/: HistoryItemDelegate.cpp  HistoryItemDelegate.h  HistoryListModel.cpp  HistoryListModel.h  MainPopup.cpp  MainPopup.h  PreviewPane.cpp  PreviewPane.h  SettingsDialog.cpp  SettingsDialog.h  Theme.cpp  Theme.h  TrayIcon.cpp  TrayIcon.h
build-macos/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cpman-0.1.0-macOS.dmg
build-macos/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-macos/app/: Makefile  cmake_install.cmake
build-macos/app/cpman.app/Contents/: Info.plist
build-macos/app/cpman.app/Contents/MacOS/: cpman
build-macos/app/cpman.app/Contents/Resources/: cpman.icns
build-macos/app/cpman_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-macos/app/cpman_autogen/EWIEGA46WW/: qrc_resources.cpp
build-macos/app/cpman_autogen/TAC5DWH4SE/: moc_AutoPaster.cpp  moc_AutoPaster.cpp.d  moc_ClipboardWatcher.cpp  moc_ClipboardWatcher.cpp.d  moc_Database.cpp  moc_Database.cpp.d  moc_FocusManager.cpp  moc_FocusManager.cpp.d  moc_HotkeyManager.cpp  moc_HotkeyManager.cpp.d  moc_ImageStore.cpp  moc_ImageStore.cpp.d  moc_InMemoryStore.cpp  moc_InMemoryStore.cpp.d  moc_Settings.cpp  moc_Settings.cpp.d  moc_SingleInstance.cpp  moc_SingleInstance.cpp.d
build-macos/app/cpman_autogen/UYX5XTB5RZ/: moc_HistoryItemDelegate.cpp  moc_HistoryItemDelegate.cpp.d  moc_HistoryListModel.cpp  moc_HistoryListModel.cpp.d  moc_MainPopup.cpp  moc_MainPopup.cpp.d  moc_PreviewPane.cpp  moc_PreviewPane.cpp.d  moc_SettingsDialog.cpp  moc_SettingsDialog.cpp.d  moc_TrayIcon.cpp  moc_TrayIcon.cpp.d
cmake/: FindQHotkey.cmake
scripts/: build.sh
scripts/linux/: build.sh  flatpak.json
scripts/linux/flatpak/: com.cpman.app.desktop  com.cpman.app.metainfo.xml
scripts/macos/: build.sh  build_alt.sh  dmg_setup.scpt
scripts/windows/: build.bat  cpman.nsi  toolchain.cmake
